Disable separate scoring of public and private test cases
Recent changes in the Italian repository destroyed that code.

--- a/cms/server/templates/admin/submission.html
+++ b/cms/server/templates/admin/submission.html
@@ -98,12 +98,8 @@
         <td>{{ sr.compilation_sandbox }}</td>
       </tr>
       <tr>
-        <td>Evaluation attempts (public test cases)</td>
-        <td>{{ sr.public_evaluation_tries }}</td>
-      </tr>
-      <tr>
-        <td>Evaluation attempts (private test cases)</td>
-        <td>{{ sr.private_evaluation_tries }}</td>
+        <td>Evaluation attempts</td>
+        <td>{{ sr.evaluation_tries }}</td>
       </tr>
       {% end %}
       <tr>
@@ -130,7 +126,7 @@
   </form>
 </div>
 
-  {% if sr is not None and sr.scored(not s.tokened()) %}
+  {% if sr is not None and sr.scored() %}
 
 <h2 id="title_evaluation_user" class="toggling_on">Evaluation (as seen by the user)</h2>
 <div id="evaluation_user">
