--- a/cmstaskoverview/templates/overview.html
+++ b/cmstaskoverview/templates/overview.html
@@ -117,7 +117,7 @@
             </div>
         </div>
         
-        <div class="modal" id="col-select-dialog">
+        <div class="modal wide" id="col-select-dialog">
             <div class="modal-header">
                 <button type="button" class="close" onClick="close_modal('col-select')">&#xD7;</button>
                 <h3>Select Columns</h3>
@@ -125,15 +125,32 @@
             <div class="modal-body">
                 <form name="col-select">
                     <div class="control-panel">
-                    <h6>Columns to be shown</h6>
-                    {% for key in TaskInfo.entries() %}
-                        <div class="checkbox">
-                            <input type="checkbox" id="col-{{key}}">
-                            <label for="col-{{key}}">
-                            {% raw TaskInfo.desc()[key] %}
-                            </label>
+                        <h6>Columns to be shown</h6>
+                        <div class="control-table" style="margin-top:2px;">
+                            <div class="two-cols">
+                                <div>
+                                {% for key in TaskInfo.entries()[:len(TaskInfo.entries()) / 2] %}
+                                    <div class="checkbox">
+                                        <input type="checkbox" id="col-{{key}}">
+                                        <label for="col-{{key}}">
+                                        {% raw TaskInfo.desc()[key] %}
+                                        </label>
+                                    </div>
+                                {% end %}
+                                </div>
+                                
+                                <div>
+                                {% for key in TaskInfo.entries()[len(TaskInfo.entries()) / 2:] %}
+                                    <div class="checkbox">
+                                        <input type="checkbox" id="col-{{key}}">
+                                        <label for="col-{{key}}">
+                                        {% raw TaskInfo.desc()[key] %}
+                                        </label>
+                                    </div>
+                                {% end %}
+                                </div>
+                            </div>
                         </div>
-                    {% end %}
                     </div>
                 </form>
             </div>
