cmsTaskOverviewWebHandler: make statements downloadble

--- a/cmstaskoverview/templates/overview.html
+++ b/cmstaskoverview/templates/overview.html
@@ -14,10 +14,12 @@
         <link rel="stylesheet" href="static/css/rangeslider.css">
         <link rel="stylesheet" href="static/css/checkbox.css">
         
+        <script src="static/jq/jquery-1.7.1.min.js"></script>
         <script src="static/js/slider.js"></script>
         <script src="static/js/dateslider.js"></script>
         <script src="static/js/rangeslider.js"></script>
         <script src="static/js/modal.js"></script>
+        <script src="static/js/download.js"></script>
         <script src="static/js/overview.js"></script>
         
         <script>
