--- a/cmstaskoverview/static/css/download.css
+++ b/cmstaskoverview/static/css/download.css
@@ -22,13 +22,18 @@ div.download-icon:hover {
     background-image:url("/static/img/download-hover.png");
 }
 
-div.download-icon.loading {
-    background:none;
+div.download-icon.down {
+    background-image:url("/static/img/download-pressed.png");
+}
+
+div.download-icon.loading, div.download-icon.down.loading {
+    background-image:none;
     cursor:auto;
 }
 
-div.download-icon.down {
-    background-image:url("/static/img/download-pressed.png");
+div.download-icon.error, div.download-icon.down.error {
+    background-image:url("/static/img/error.png");
+    cursor:auto;
 }
 
 /* Animated overlays */
@@ -77,4 +82,35 @@ div.download-icon.done::before {
     animation-duration:1s;
     animation-timing-function:linear;
     animation-fill-mode:forwards;
+}
+
+@keyframes download-error {
+    0% {
+        background-size:6px 20px;
+        opacity:1;
+    }
+    
+    50% {
+        background-size:12px 40px;
+        opacity:.2;
+    }
+    
+    100% {
+        background-size:18px 60px;
+        opacity:0;
+    }
+}
+
+div.download-icon.error:before {
+     content:"";
+    width:100px;
+    height:100px;
+    opacity:.5;
+    background-image:url("/static/img/error-flat.png");
+    background-repeat:no-repeat;
+    background-position:center;
+    animation-name:download-error;
+    animation-duration:1s;
+    animation-timing-function:ease;
+    animation-fill-mode:forwards; 
 }
