cmsTaskOverviewWebServer: eliminated a possible multithreading problem
The following situation is possible (though unlikely with small user base):
 1. Client A compiles a certain task
 2. The compilation finishes
 3. Before Client A queries the status, another client B compiles the same task
In this case the original version would recompile the statement and client A would need to wait for the compilation for client B to finish. Of course, iterating this we could have arbitrary long waiting times for all clients...

--- a/cmstaskoverview/templates/overview.html
+++ b/cmstaskoverview/templates/overview.html
@@ -131,10 +131,10 @@
                 </p>
             
                 <h6> Error message received from server </h6>
-                <pre><code id="error-msg"></code></pre>
+                <pre class="short"><code id="error-msg"></code></pre>
                 
                 <h6> Compilation log </h6>
-                <pre><code id="error-log"></code></pre>
+                <pre class="short"><code id="error-log"></code></pre>
             </div>
             <div class="modal-footer">
             <button class="btn btn-primary" style="float:left;" id="retry-compilation" onClick="retry_compilation()">Retry</button>
